# tractorun

./: .changelog-config.yaml  .gitignore  CHANGELOG.md  Makefile  README.md  README_DEV.md  build_and_upload.sh  package_description.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_examples.txt  requirements_jax.txt  requirements_lightning.txt  requirements_tensorproxy.txt  requirements_tests.txt  requirements_torch.txt  run_build  run_example  run_jax_example  run_tensorproxy_tests  run_tests  run_tests.sh  run_torch_example  run_update_tag.sh  setup.cfg
.github/workflows/: black.yaml  isort.yaml  mypy.yaml  pypi.yaml  pypi_external.yaml  pypi_internal.yaml  release.yaml  ruff.yaml  style_checker.yaml  tests.yaml
docker/: targets.hcl  vars.hcl
docs/: backend.md  options.md  toolbox.md
examples/: README.md  run_example  run_example.sh
examples/adoptation/cli/: native_cli.py  tractorun_cli.py
examples/adoptation/mnist_simple/cli/: tractorun.py
examples/adoptation/mnist_simple/sdk/: original.py  tractorun.py
examples/adoptation/sdk/: native_sdk.py  tractorun_sdk.py
examples/jax/jax_simple/: jax_simple.py
examples/jax/jax_simple_distributed/: jax_simple_distributed.py
examples/jax_simple/: jax_simple.py
examples/jax_simple_distributed/: jax_simple_distributed.py
examples/lightning_mnist/: lightning_mnist.py
examples/lightning_mnist_ddp/: lightning_mnist_ddp.py
examples/lightning_mnist_ddp_script/: lightning_mnist_ddp_script.py  run.sh
examples/misc/infiniband_speed_test/: config.yaml  infiniband_speed_test.py  run.sh
examples/misc/infiniband_speed_test/docker/: Dockerfile
examples/papyrax/: README.md  config.yaml  main_config.yaml  papyrax_example.py
examples/pytorch/lightning_mnist/: lightning_mnist.py  main.py
examples/pytorch/lightning_mnist_ddp/: lightning_mnist_ddp.py  main.py
examples/pytorch/lightning_mnist_ddp_script/: lightning_mnist_ddp_script.py  run.sh
examples/pytorch/lightning_mnist_ddp_script_config/: config.yaml  lightning_mnist_ddp_script_config.py  run.sh
examples/pytorch/simple_distributed/: distributed.py  simple_distributed.py
examples/pytorch/torch_mnist/: main.py  torch_mnist.py
examples/pytorch/torch_mnist_checkpoints/: main.py  torch_mnist_checkpoints.py
examples/simple_distributed/: distributed.py
examples/torch_mnist/: torch_mnist.py
examples/torch_mnist_checkpoints/: torch_mnist_checkpoints.py
ray/: session_latest
tests/: conftest.py  test_bootstrapper.py  test_run.py  test_sidecars.py  utils.py  yt_instances.py
tests/data/: check_cypress_bind.py  dummy_script.py  env_script.py  jax_run_script.py  log_table_script.py  mnist_small.yson  restarting_sidecar_script.py  run_config.yaml  run_config_with_cypress_bind.yaml  stderr_script.py  tensorproxy_script.py  torch_run_script.py
tests/data/binds/: another_file
tests/data/binds/bind_dir/: some_file
tests/examples/: test_examples.py
tests/generic/: test_binds.py  test_bootstrapper.py  test_cli.py  test_cluster_config.py  test_config.py  test_description.py  test_docker_auth.py  test_environment.py  test_log_table.py  test_mesh.py  test_operation_log.py  test_process_manager.py  test_project_structure.py  test_run.py  test_sidecars.py  test_stderr_reader.py  test_sync.py  test_title.py  test_yt_cluster.py
tests/generic/data/: sidecar_script.py
tests/ray/: test_project_structure.py  test_run.py
tests/tensorproxy/: test_tensorproxy.py
tests/tractorax/: test_project_structure.py  test_run.py
tests/tractorch/: test_project_structure.py  test_run.py
tools/stderr_reader/: stderr_reader.py
torchesaurus/: checkpoints.py  coordinator.py  dataset.py  helpers.py  job_client.py  lightning_mnist.py  mesh.py  resources.py  run.py  runner.py  test.py  test_dist.py  torch_mnist.py  tractorun.py  utils.py
torchesaurus/cli/: tractorun.py
tractorun/: __init__.py  base_backend.py  bind.py  bootstrapper.py  checkpoint.py  checkpoints.py  closet.py  constants.py  coordinator.py  dataset.py  description.py  docker_auth.py  env.py  environment.py  exception.py  exceptions.py  helpers.py  job_client.py  mesh.py  operation_log.py  resources.py  run.py  run_info.py  run_internal.py  runner.py  sidecar.py  stderr_reader.py  tensorproxy.py  toolbox.py  training_dir.py  utils.py
tractorun/backend/generic/: __init__.py  backend.py  environment.py
tractorun/backend/ray/: __init__.py  backend.py  environment.py
tractorun/backend/tractorax/: __init__.py  backend.py  environment.py
tractorun/backend/tractorch/: __init__.py  backend.py  dataset.py  environment.py  serializer.py
tractorun/cli/: _tractorun_bootstrap.py  tractorun.py  tractorun_bootstrap.py  tractorun_runner.py  yt_stderr_reader.py
tractorun/private/: base_backend.py  bind.py  bootstrapper.py  closet.py  cluster_config.py  constants.py  coordinator.py  description.py  docker_auth.py  environment.py  helpers.py  logging.py  operation_log.py  process_manager.py  run.py  run_internal.py  sidecar.py  stderr_reader.py  tensorproxy.py  training_dir.py  worker.py  yt_cluster.py
