[project]
name = "tractorun"
authors = [{name = "TractoAI team"}]
requires-python = ">=3.8"
dependencies = [
    "attrs ~= 23.2.0",
    "torch ~= 2.3.0",
    "ytsaurus-client ~= 0.13.14",
    "ytsaurus-yson ~= 0.4.5",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "tractorun.__version__"}

[project.scripts]
tractorun = "tractorun.cli.tractorun:__main__"

[project.optional-dependencies]
tests = [
    "pytest < 9",
    "testcontainers-yt-local < 1",
]
dev = [
    "isort ~= 5.13.2",
    "black ~= 24.4.2",
    "ruff ~= 0.4.4",
    "mypy ~= 1.10.0",
    "mypy-extensions ~= 1.0.0",
]
examples = [
    "pytorch-lightning ~= 2.2.5"
]
all = [
    "tractorun[tests]",
    "tractorun[dev]",
    "tractorun[examples]",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
include_trailing_comma = true
force_sort_within_sections = true
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]

[tool.mypy]
#disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "yt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers_yt_local.*"
ignore_missing_imports = true
