[project]
name = "tractorun"
authors = [{name = "TractoAI team"}]
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["tractorun"]

[tool.setuptools.dynamic]
version = {attr = "tractorun.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.torch = { file = ["requirements_torch.txt"] }
optional-dependencies.tests = { file = ["requirements_tests.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
optional-dependencies.lightning = { file = ["requirements_lightning.txt"] }
optional-dependencies.all = { file = ["requirements_torch.txt", "requirements_tests.txt", "requirements_dev.txt", "requirements_lightning.txt"] }

[project.scripts]
tractorun = "tractorun.cli.tractorun:__main__"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2
include_trailing_comma = true
force_sort_within_sections = true
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER"
]

[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "yt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testcontainers_yt_local.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yt_yson_bindings.*"
ignore_missing_imports = true
